--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,17 +1,48 @@
-.nav_parent_div{
-    border: 2px solid red;
+.nav_parent_div     {
+    /* border: 2px solid red; */
     display: flex;
     flex-direction: row;
-    
+    position: fixed;
+    width: 99.7%;
+    top: 90%;
 }
 
-.nav_Link_Li{
+.nav_Link_Li    {
+    background-color: white;
     display: inline-block;
-    border: 2px solid blue;
+    border-left: 0.5px solid gray;
+    border-right: 0.5px solid gray;
+    border-top: 1px solid gray;
+    border-radius: 5px;
     margin: 0 auto;
+    position: relative;
     width: 13rem;
     text-align: center;
+   
+}
+
+.nav_Link_Li:active {
+    background-color: black;
+    color: white;
+}
+
+/* below is for styling color of calendar icon */
+
+.nav_Link_Li  img{
+    max-width: 100%;
+    height: 2.4rem;
+    margin: 0 auto;
+}
+
+.nav_Link_Li h5{
+    /* border: 2px solid black; */
+    margin: 0 auto;
+}
+
+@media(min-width: 780px){
     
-    /* flexbox-styles */
+    .nav_Link_Li {
+        width: 35%;
+    }
 
 }
