started component file structure

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,4 +2,5 @@
     border-top: 1px solid black;
     border-bottom: 1px solid black;
     text-align: center;
+    font-family: 'Dosis', sans-serif;
 }
