--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,22 +1,31 @@
 .nav_parent_div     {
     /* border: 2px solid red; */
     display: flex;
-    flex-direction: row;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	justify-content: space-around;
+	align-items: stretch;
+	align-content: space-between;
     position: fixed;
     width: 99.7%;
     top: 90%;
 }
 
+.nav_parent_div > *{
+    flex:1 1;
+}
+
+
 .nav_Link_Li    {
     background-color: white;
-    display: inline-block;
+    /* display: inline-block; */
     border-left: 0.5px solid gray;
     border-right: 0.5px solid gray;
     border-top: 1px solid gray;
     border-radius: 5px;
     margin: 0 auto;
     position: relative;
-    width: 13rem;
+    /* width: 13rem; */
     text-align: center;
    
 }
