--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -1,11 +1,11 @@
 .nav_parent_div     {
     /* border: 2px solid red; */
     display: flex;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	justify-content: space-around;
-	align-items: stretch;
-	align-content: space-between;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: stretch;
+    align-content: space-between;
     position: fixed;
     z-index: 11;
     width: 99.7%;
@@ -13,11 +13,11 @@
 }
 
 .nav_parent_div > *{
-    flex:1 1;
+    flex:1;
 }
 
 .nav_Link_Li    {
-    background-color: white;
+    background-color: #C43235;
     border-left: 0.5px solid gray;
     border-right: 0.5px solid gray;
     border-top: 1px solid gray;
@@ -54,7 +54,7 @@
 @media(min-width: 780px){
     
     .nav_Link_Li {
-        width: 35%;
+        width: 100%;
     }
 
 }
