--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -3,4 +3,11 @@
     border-bottom: 1px solid black;
     text-align: center;
     font-family: 'Dosis', sans-serif;
+    height: 7rem;
+}
+
+.pageTitle {
+    display: inline-block;
+    position: absolute;
+    left: 50%;
 }
