--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -14,6 +14,12 @@
   width: 200px;
   margin: auto;
 }
+.editAddressContainer{
+  display: flex;
+  flex-direction: column;
+  width: 200px;
+  margin: auto;
+}
 
 .addressContainer{
   border: 1px blue solid;
@@ -69,8 +75,9 @@
 }
 
 .notificationLabel{
-  width: 50%;
+  width: 60%;
   margin: auto;
+  position: sticky;
 }
 
 .singleAddressLabel{
@@ -81,6 +88,15 @@
   color: white;
   display: flex;
   flex-direction: row;
+  animation: requestContainerAni 1s;
+  animation-fill-mode: forwards;
+  overflow:hidden;
+}
+
+@keyframes requestContainerAni{
+  from{margin-right:300px}
+  to{margin-right:0px}
+
 }
 
 .requestInfoContainer{
@@ -107,6 +123,9 @@
   display: none;
 }
 .addAddressOff{
+  display: none;
+}
+.editAddressOff{
   display: none;
 }
 
