--- a/src/components/Groups/Groups.css
+++ b/src/components/Groups/Groups.css
@@ -1,3 +1,7 @@
+.react-swipe-container{
+    width:100%;
+}
+
 .mainGroupContainer{
     background-color:#e6e6e8;
     animation: mainGroupContainerAni .3s linear;
@@ -12,7 +16,7 @@
     /* transition:all .5s; */
     background-color:#c43235;
     color:white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
     /* margin:auto; */
     margin-bottom:1px;
     height:75px;
@@ -30,6 +34,7 @@
     animation-timing-function: linear;
     animation-fill-mode: forwards;
     width:100vw !important;
+    margin-bottom:1px;
 }
 
 @keyframes groupContainerAni{
@@ -87,7 +92,7 @@ button:focus{
     /* background-color:#c43235; */
     background-color:#300032;
     color:white;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
     animation:groupDetailsAni .2s;
     animation-delay: 1s;
     animation-fill-mode: forwards;
