--- a/src/components/NewGroup/newgroup.css
+++ b/src/components/NewGroup/newgroup.css
@@ -67,6 +67,8 @@
     margin:0 10px;
     padding-bottom:5px;
     margin-bottom:10px;
+    /* margin-right:10px; */
+    transition: all 5s;
 
 
 }
@@ -88,15 +90,12 @@
 .singleFriendDiv .border{
     position: absolute;
     border:solid rgb(3, 235, 3) 3px;
-    width:98%;
-    margin:auto;
-    height:100%;
-    margin-left:-10px;
-    padding:0 10px;
-    /* padding-top:10px; */
-    margin-top:-5px;
+    width:98.5vw;
+    margin-left:0;
+    padding:40px 0;
     /* padding:10px; */
     /* margin:-5px; */
 
 }
+
 
