--- a/src/components/Groups/Groups.css
+++ b/src/components/Groups/Groups.css
@@ -19,8 +19,8 @@
     /* box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); */
     /* margin:auto; */
     margin-bottom:1px;
-    height:75px;
-    padding:5px 0;
+    /* height:75px; */
+    /* padding:5px 0; */
     /* margin:0 40px; */
     /* width:95%; */
     margin-left:-500px;
@@ -42,9 +42,9 @@
     to{margin-left:0;display:block;}
 }
 
-.groupContainer > div{
-    margin:0 10px;
-    padding:10px 0;
+.groupContainer > * > div{
+    /* margin:0 10px; */
+    /* padding:10px 10px; */
 }
 
 
