--- a/src/components/DisplayUsers/displayUsers.css
+++ b/src/components/DisplayUsers/displayUsers.css
@@ -13,7 +13,8 @@
     width: 100%;
     height: 100vh;
     border-radius: 7px;
-    overflow: scroll;
+    /* overflow: scroll;
+     */
     position: absolute;
     background-color: #E6E6E8;
     color: white;
