--- a/src/components/DisplayUsers/displayUsers.css
+++ b/src/components/DisplayUsers/displayUsers.css
@@ -69,6 +69,10 @@
     z-index: 20;
 }
 
+.user_img{
+    width: 60px;
+}
+
 
 @media(max-width: 770px){
    
@@ -80,3 +84,4 @@
         border: 2px solid white;
     }
 } 
+
