--- a/src/components/GroupEvent/GroupEvent.css
+++ b/src/components/GroupEvent/GroupEvent.css
@@ -14,8 +14,18 @@
 
 .eventRightContainer{
     position: absolute;
-    top:2.5vh;
+    top: 0;
     right:0;
+    width: 17vw;
+}
+.eventRightContainer > *{
+   margin-left: 30px;
+   margin-top: -5px;
+   margin-bottom: -10px;
+}
+
+.yelpLogoContainer > img{
+    width: 64px;
 }
 
 .otherFlex{
