--- a/src/components/AddEvent/AddEvent.css
+++ b/src/components/AddEvent/AddEvent.css
@@ -12,3 +12,18 @@
 .mainAddEventContainer .groupContainer{
     transition: all .1s !important;
 }
+
+.inputParentDiv .newEvent-input {
+    border: 2px solid black;
+    width: 80%;
+    height: 3rem;
+    border-radius: 10px;
+    font-size: 24px;
+    margin-top: 10px;
+}
+
+.inputParentDiv  button{
+    border: 2px solid black;
+    position: relative;
+}
+
