--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,12 @@
   /* text-align: center; */
   /* width:95%; */  
   margin-bottom:60px;
-  box-sizing: content-box;
+  /* box-sizing: content-box; */
   /* overflow:hidden; */
   background-color:#e6e6e8;
   width:100vw;
   height:100vh;
-  overflow-y: hidden !important;
-  
+  overflow-y: hidden !important; 
 }
 
 .App-logo {
@@ -38,4 +37,9 @@
 
 .gm-style-mtc{
   display: none;
+}
+
+.scrollableNotificationContainer{
+  overflow:scroll;
+    height:16vh;
 }
